--- a/index.html
+++ b/index.html
@@ -106,6 +106,84 @@
         </div>
     </div>
 </div>
+<div class="categories">
+    <div class="categories__item">
+        <div class="category container">
+    <div class="row align-items-center">
+        <div class="col-lg-6">
+            <h2 class="title">ГФС-42, ГФС-55</h2>
+            <div class="category__subtitle subtitle">Глюкозно-фруктозный сироп</div>
+            <div class="category__description">
+                Сахара природного происхождения, полученные из пшеницы. Сиропы однородны и прозрачны,
+                нейтральны в аромате с интенсивно сладким вкусом без посторонних примесей.
+            </div>
+            <div class="category__links">
+                <a href="#" class="category__link">
+                    Презентация глюкозно-фруктозных сиропов
+                </a>
+                <a href="#" class="category__link">
+                    Сертификация ГФС-42, ГФС-55
+                </a>
+            </div>
+        </div>
+        <div class="col-lg-6">
+            <img src="images/categories/syrup-img.png" class="category__image" alt="">
+        </div>
+    </div>
+    <div class="category__advantages">
+        <div class="subtitle">Преимущества использования ГФС-45, ГФС-55</div>
+        <div class="category__tabs list-group" role="tablist">
+            <a class="category__tab active" data-toggle="list" href="#syrup-cost-price" role="tab"
+               aria-controls="syrup-cost-price">
+                Для себестоимости
+            </a>
+            <a class="category__tab" data-toggle="list" href="#syrup-production" role="tab"
+               aria-controls="syrup-production">
+                Для производства
+            </a>
+            <a class="category__tab" data-toggle="list" href="#syrup-products" role="tab"
+               aria-controls="syrup-products">
+                Для производства
+            </a>
+        </div>
+        <div class="category__tabs-content tab-content">
+            <div class="tab-pane fade show active" id="syrup-cost-price" role="tabpanel">
+                <div class="row">
+                    <div class="col-lg-6">
+    <div class="advantage">
+        <img src="images/categories/time.jpg" class="advantage__image" alt="">
+        <div class="advantage__caption">Сокращение времени производственных процессов и энергопотребления, затрат, связанных с использованием ГФС по сравнению с использованием сахара</div>
+    </div>
+</div><div class="col-lg-6">
+    <div class="advantage">
+        <img src="images/categories/pump.jpg" class="advantage__image" alt="">
+        <div class="advantage__caption">Быстро и легко перекачивается и складируется</div>
+    </div>
+</div><div class="col-lg-6">
+    <div class="advantage">
+        <img src="images/categories/economy.jpg" class="advantage__image" alt="">
+        <div class="advantage__caption">Более экономичен в сравнении с сахаром при производстве хлебобулочных изделий, алкоголя т.к. дрожжи и комплексы легче сбраживают моносахариды, чем сахарозу. 96% сахаров — ГФС</div>
+    </div>
+</div><div class="col-lg-6">
+    <div class="advantage">
+        <img src="images/categories/spoon.jpg" class="advantage__image" alt="">
+        <div class="advantage__caption">Производство ГФС не ограничивается периодом сбора урожая</div>
+    </div>
+</div><div class="col-lg-6">
+    <div class="advantage">
+        <img src="images/categories/sugar.jpg" class="advantage__image" alt="">
+        <div class="advantage__caption">Используется как для полной, так и для частичной замены сахара, патоки, инверта, искусственного меда в сахаросодержащих продуктах</div>
+    </div>
+</div>
+                </div>
+            </div>
+            <div class="tab-pane fade" id="syrup-production" role="tabpanel">...</div>
+            <div class="tab-pane fade" id="syrup-products" role="tabpanel">...</div>
+        </div>
+    </div>
+</div>
+    </div>
+</div>
 
 
         <script src="js/jquery.min.js"></script>
