--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,5 +1,6 @@
 @@include('blocks/header.html')
 
 @@include('blocks/use.html')
+@@include('blocks/categories.html')
 
 @@include('blocks/footer.html')
