Added adaptive for categories & silica gel category block

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
 <div class="categories">
     <div class="categories__item">
         <div class="category container">
-    <div class="row align-items-center">
-        <div class="col-lg-6">
+    <div class="row align-items-start align-items-lg-center">
+        <div class="col-md-6 order-1 order-md-0">
             <h2 class="title">ГФС-42, ГФС-55</h2>
             <div class="category__subtitle subtitle">Глюкозно-фруктозный сироп</div>
             <div class="category__description">
@@ -118,15 +118,11 @@
                 нейтральны в аромате с интенсивно сладким вкусом без посторонних примесей.
             </div>
             <div class="category__links">
-                <a href="#" class="category__link">
-                    Презентация глюкозно-фруктозных сиропов
-                </a>
-                <a href="#" class="category__link">
-                    Сертификация ГФС-42, ГФС-55
-                </a>
+                <a href="#" class="category__link">Презентация глюкозно-фруктозных сиропов</a>
+                <a href="#" class="category__link">Сертификация ГФС-42, ГФС-55</a>
             </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-md-6 order-0 order-md-1">
             <img src="images/categories/syrup-img.png" class="category__image" alt="">
         </div>
     </div>
@@ -179,6 +175,75 @@
             </div>
             <div class="tab-pane fade" id="syrup-production" role="tabpanel">...</div>
             <div class="tab-pane fade" id="syrup-products" role="tabpanel">...</div>
+        </div>
+    </div>
+</div>
+    </div>
+    <div class="categories__item">
+        <div class="category container">
+    <div class="row align-items-start align-items-lg-center">
+        <div class="col-md-6 order-1 order-md-0">
+            <h2 class="title">Силикагелевые стабилизаторы</h2>
+            <div class="category__description">
+                Технологическое вспомогательное средство, участвующее в технологическом процессе,
+                Пищевая добавка Е 551, Стабилизаторы созданы таким образом, что физико-химические
+                параметры обеспечивают максимальную эффективность при стабилизации и избирательной
+                адсорбции из пива (вина) белков, вызывающих «холодное» помутнение, а также сохраняют
+                необходимое пенообразование.
+            </div>
+            <div class="category__links">
+                <a href="#" class="category__link">Презентация силикагелевых стабилизаторов</a>
+                <a href="#" class="category__link">Сертификат безопасности</a>
+            </div>
+        </div>
+        <div class="col-md-6 order-0 order-md-1">
+            <img src="images/categories/silicagel-img.png" class="category__image" alt="">
+        </div>
+    </div>
+    <div class="category__advantages">
+        <div class="subtitle">Применение силикогелевых стабилизаторов</div>
+        <div class="category__tabs list-group" role="tablist">
+            <a class="category__tab active" data-toggle="list" href="#silicagel-brewing" role="tab"
+               aria-controls="silicagel-brewing">
+                Для пивоварения
+            </a>
+            <a class="category__tab" data-toggle="list" href="#silicagel-winemaking" role="tab"
+               aria-controls="silicagel-winemaking">
+                Для виноделия
+            </a>
+        </div>
+        <div class="category__tabs-content tab-content">
+            <div class="tab-pane fade show active" id="silicagel-brewing" role="tabpanel">
+                <div class="row">
+                    <div class="col-lg-6">
+    <div class="advantage">
+        <img src="images/categories/time.jpg" class="advantage__image" alt="">
+        <div class="advantage__caption">Сокращение времени производственных процессов и энергопотребления, затрат, связанных с использованием ГФС по сравнению с использованием сахара</div>
+    </div>
+</div><div class="col-lg-6">
+    <div class="advantage">
+        <img src="images/categories/pump.jpg" class="advantage__image" alt="">
+        <div class="advantage__caption">Быстро и легко перекачивается и складируется</div>
+    </div>
+</div><div class="col-lg-6">
+    <div class="advantage">
+        <img src="images/categories/economy.jpg" class="advantage__image" alt="">
+        <div class="advantage__caption">Более экономичен в сравнении с сахаром при производстве хлебобулочных изделий, алкоголя т.к. дрожжи и комплексы легче сбраживают моносахариды, чем сахарозу. 96% сахаров — ГФС</div>
+    </div>
+</div><div class="col-lg-6">
+    <div class="advantage">
+        <img src="images/categories/spoon.jpg" class="advantage__image" alt="">
+        <div class="advantage__caption">Производство ГФС не ограничивается периодом сбора урожая</div>
+    </div>
+</div><div class="col-lg-6">
+    <div class="advantage">
+        <img src="images/categories/sugar.jpg" class="advantage__image" alt="">
+        <div class="advantage__caption">Используется как для полной, так и для частичной замены сахара, патоки, инверта, искусственного меда в сахаросодержащих продуктах</div>
+    </div>
+</div>
+                </div>
+            </div>
+            <div class="tab-pane fade" id="silicagel-winemaking" role="tabpanel">...</div>
         </div>
     </div>
 </div>
