--- a/src/html/blocks/categories.html
+++ b/src/html/blocks/categories.html
@@ -2,4 +2,7 @@
     <div class="categories__item">
         @@include('parts/category-syrup.html')
     </div>
+    <div class="categories__item">
+        @@include('parts/category-silicagel.html')
+    </div>
 </div>
