--- a/src/html/blocks/parts/category-syrup.html
+++ b/src/html/blocks/parts/category-syrup.html
@@ -1,6 +1,6 @@
 <div class="category container">
-    <div class="row align-items-center">
-        <div class="col-lg-6">
+    <div class="row align-items-start align-items-lg-center">
+        <div class="col-md-6 order-1 order-md-0">
             <h2 class="title">ГФС-42, ГФС-55</h2>
             <div class="category__subtitle subtitle">Глюкозно-фруктозный сироп</div>
             <div class="category__description">
@@ -8,15 +8,11 @@
                 нейтральны в аромате с интенсивно сладким вкусом без посторонних примесей.
             </div>
             <div class="category__links">
-                <a href="#" class="category__link">
-                    Презентация глюкозно-фруктозных сиропов
-                </a>
-                <a href="#" class="category__link">
-                    Сертификация ГФС-42, ГФС-55
-                </a>
+                <a href="#" class="category__link">Презентация глюкозно-фруктозных сиропов</a>
+                <a href="#" class="category__link">Сертификация ГФС-42, ГФС-55</a>
             </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-md-6 order-0 order-md-1">
             <img src="images/categories/syrup-img.png" class="category__image" alt="">
         </div>
     </div>
