Added fully adaptive about block

--- a/index.html
+++ b/index.html
@@ -249,6 +249,37 @@
 </div>
     </div>
 </div>
+<div class="about">
+    <div class="about__content">
+        <div class="container">
+            <img src="images/about/logo.png" class="about__logo" alt="">
+            <div class="about__description">
+                Компания «Биотэр» является официальным представителем по технологической поддержке,
+                продвижению и внедрению.
+            </div>
+            <div class="about__benefits row">
+                <div class="about__benefit col-lg-4 col-md-6">
+                    <img src="images/about/team.svg" alt="" class="about__benefit-icon">
+                    <div class="about__benefit-text">
+                        Опыт, профессионализм и ответственность сотрудников
+                    </div>
+                </div>
+                <div class="about__benefit col-lg-4 col-md-6">
+                    <img src="images/about/support.svg" alt="" class="about__benefit-icon">
+                    <div class="about__benefit-text">
+                        Технологическая поддержка в ведении технологического процесса
+                    </div>
+                </div>
+                <div class="about__benefit col-lg-4 col-md-6">
+                    <img src="images/about/price.svg" alt="" class="about__benefit-icon">
+                    <div class="about__benefit-text">
+                        Умеренные и адекватные цены
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 
         <script src="js/jquery.min.js"></script>
