--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,5 +2,6 @@
 
 @@include('blocks/use.html')
 @@include('blocks/categories.html')
+@@include('blocks/about.html')
 
 @@include('blocks/footer.html')
