Added logistics block with slider

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="css/bootstrap-grid.min.css">
+        <link rel="stylesheet" href="css/flickity.css">
         <link rel="stylesheet" href="css/style.css">
 
         <title>Биотэр</title>
@@ -277,6 +278,48 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+</div>
+<div class="logistics">
+    <div class="container">
+        <h2 class="title">Собственная логистика</h2>
+        <div class="logistics__benefits row">
+            <div class="logistics__benefit col-lg-4">
+                <div class="logistics__benefit-icon">
+                    <img src="images/logistics/clock.svg" alt="">
+                </div>
+                <div class="logistics__benefit-text">
+                    Своевременная доставка прямо на производство
+                </div>
+            </div>
+            <div class="logistics__benefit col-lg-4">
+                <div class="logistics__benefit-icon">
+                    <img src="images/logistics/pin.svg" alt="">
+                </div>
+                <div class="logistics__benefit-text">
+                    Транспортировка в любой регион и в любых объемах
+                </div>
+            </div>
+            <div class="logistics__benefit col-lg-4">
+                <div class="logistics__benefit-icon">
+                    <img src="images/logistics/help.svg" alt="">
+                </div>
+                <div class="logistics__benefit-text">
+                    Помощь в отгрузке и советы по хранению
+                </div>
+            </div>
+        </div>
+        <div class="logistics__slider">
+            <div class="logistics__equipment" style="background-image: url('images/logistics/semitrailer.jpg')">
+    <div class="logistics__equipment-name">Полуприцеп-цистерна</div>
+</div><div class="logistics__equipment" style="background-image: url('images/logistics/pump.png')">
+    <div class="logistics__equipment-name">Насос для сиропов</div>
+</div><div class="logistics__equipment" style="background-image: url('images/logistics/barrels.jpg')">
+    <div class="logistics__equipment-name">Пластиковые бочки</div>
+</div><div class="logistics__equipment" style="background-image: url('images/logistics/barrels.jpg')">
+    <div class="logistics__equipment-name">Еще бочки</div>
+</div>
         </div>
     </div>
 </div>
