--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,5 +3,6 @@
 @@include('blocks/use.html')
 @@include('blocks/categories.html')
 @@include('blocks/about.html')
+@@include('blocks/logistics.html')
 
 @@include('blocks/footer.html')
