Added adaptive for logistics block

--- a/src/html/blocks/logistics.html
+++ b/src/html/blocks/logistics.html
@@ -2,7 +2,7 @@
     <div class="container">
         <h2 class="title">Собственная логистика</h2>
         <div class="logistics__benefits row">
-            <div class="logistics__benefit col-lg-4">
+            <div class="logistics__benefit col-lg-4 col-md-6">
                 <div class="logistics__benefit-icon">
                     <img src="images/logistics/clock.svg" alt="">
                 </div>
@@ -10,7 +10,7 @@
                     Своевременная доставка прямо на производство
                 </div>
             </div>
-            <div class="logistics__benefit col-lg-4">
+            <div class="logistics__benefit col-lg-4 col-md-6">
                 <div class="logistics__benefit-icon">
                     <img src="images/logistics/pin.svg" alt="">
                 </div>
@@ -18,7 +18,7 @@
                     Транспортировка в любой регион и в любых объемах
                 </div>
             </div>
-            <div class="logistics__benefit col-lg-4">
+            <div class="logistics__benefit col-lg-4 col-md-6">
                 <div class="logistics__benefit-icon">
                     <img src="images/logistics/help.svg" alt="">
                 </div>
