Added desktop only questions block, add ext scripts & styles, created vue.js app for form, added modals, added html beautifier plugin

--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -8,26 +8,29 @@
 
         <link rel="stylesheet" href="css/bootstrap-grid.min.css">
         <link rel="stylesheet" href="css/flickity.css">
+        <link rel="stylesheet" href="css/jquery.fancybox.min.css">
         <link rel="stylesheet" href="css/style.css">
 
         <title>Биотэр</title>
     </head>
     <body>
 
-        <div class="small-header">
-            <div class="container">
-                <div class="small-header__row row">
-                    <div class="col-auto">
-                        <span class="small-header__text">г. Краснодар&nbsp;</span>
-                        <span class="small-header__text small-header__text_translucent">
-                            ул. им. Александра Покрышкина, д. 25/А
-                        </span>
-                    </div>
-                    <div class="col-auto">
-                        <span class="small-header__text small-header__text_translucent">
-                            Пн.–Чт.: 8:00–17:00, Пт.: 8:00–16:00
-                        </span>
+        <div class="site-container">
+
+            <div class="small-header">
+                <div class="container">
+                    <div class="small-header__row row">
+                        <div class="col-auto">
+                            <span class="small-header__text">г. Краснодар&nbsp;</span>
+                            <span class="small-header__text small-header__text_translucent">
+                                ул. им. Александра Покрышкина, д. 25/А
+                            </span>
+                        </div>
+                        <div class="col-auto">
+                            <span class="small-header__text small-header__text_translucent">
+                                Пн.–Чт.: 8:00–17:00, Пт.: 8:00–16:00
+                            </span>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
