--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,5 +4,8 @@
 @@include('blocks/categories.html')
 @@include('blocks/about.html')
 @@include('blocks/logistics.html')
+@@include('blocks/questions.html')
+
+@@include('blocks/modal.html')
 
 @@include('blocks/footer.html')
