--- a/src/html/blocks/footer.html
+++ b/src/html/blocks/footer.html
@@ -1,8 +1,14 @@
 
+        </div>
+
         <script src="js/jquery.min.js"></script>
         <script src="js/popper.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/flickity.pkgd.min.js"></script>
+        <script src="js/jquery.fancybox.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+        <script src="js/axios.min.js"></script>
+        <script src="js/vue-the-mask.min.js"></script>
         <script src="js/script.js"></script>
 
     </body>
