Added adaptive for question block

--- a/index.html
+++ b/index.html
@@ -341,11 +341,11 @@
         <div class="questions">
             <div class="container">
                 <div class="row">
-                    <div class="questions__headers col-lg-4">
+                    <div class="questions__headers col-md-4 col-sm-5">
                         <div class="questions__subtitle">Остались вопросы?</div>
                         <div class="questions__title">Мы поможем внедрить любую продукцию на вашем производстве</div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-md-8 col-sm-7">
                         <div class="questions__form form" id="question-form">
                             <div class="form__title">
                                 Заполните форму и наш технолог проконсультирует по любым вопросам
