Added backend for form sending & added error icon for modal

--- a/src/html/blocks/modal.html
+++ b/src/html/blocks/modal.html
@@ -5,9 +5,9 @@
 </div>
 
 <div class="modal" id="modal-error">
-    <img src="images/modal/icon-ok.svg" class="modal__icon" alt="">
-    <div class="modal__title">Ой-ой,<br>какая досада!</div>
-    <div class="modal__subtitle">Форма не отправлена, потому что разработчик еще не написал бэкэнд</div>
+    <img src="images/modal/icon-error.svg" class="modal__icon" alt="">
+    <div class="modal__title">Ошибка</div>
+    <div class="modal__subtitle">Форма не отправлена из-за ошибки на сервере. Повторите попытку позже.</div>
 </div>
 
 <div class="modal" id="modal-form">
