Added fully adaptive footer

--- a/index.html
+++ b/index.html
@@ -403,6 +403,34 @@
 
 
 
+        <div class="footer">
+            <div class="container">
+                <div class="row align-items-xl-center">
+                    <div class="col-xl-3 col-lg-4 col-md-4 order-0">
+                        <img src="images/footer/logo.png" class="footer__logo" alt="">
+                        <div class="footer__slogan">Инновационные технологии<br>для пищевых производств</div>
+                    </div>
+                    <div class="col-xxl-3 col-lg-4 col-md-4 order-2 order-md-1">
+                        <div class="footer__contact">г. Краснодар,<br>ул. им. Александра Покрышкина, д. 25/А</div>
+                        <div class="footer__contact">Пн.–Чт.: 8:00–17:00, <br class="d-lg-none">Пт.: 8:00–16:00 </div>
+                    </div>
+                    <div class="col-xxl-6 col-xl-5 col-md-4 order-1 order-md-2">
+                        <div class="row align-items-xl-center">
+                            <div class="col-xl-6 d-flex justify-content-center justify-content-md-end">
+                                <button class="footer__button button" data-fancybox data-src="#modal-form">
+                                    Заказать звонок
+                                </button>
+                            </div>
+                            <div class="col-xl-6">
+                                <a href="tel:+79882400735" class="footer__phone">8 (988) 240-07-35</a>
+                                <a href="mailto:da@biotr.ru" class="footer__email">da@biotr.ru</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <script src="js/jquery.min.js"></script>
