Added fully adaptive header

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,5 +1,6 @@
-@@include('blocks/header.html')
+@@include('blocks/head.html')
 
+@@include('blocks/hero.html')
 @@include('blocks/use.html')
 @@include('blocks/categories.html')
 @@include('blocks/about.html')
