--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -1,36 +1,27 @@
-<!doctype html>
-<html lang="ru">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-
-        <link rel="stylesheet" href="css/bootstrap-grid.min.css">
-        <link rel="stylesheet" href="css/flickity.css">
-        <link rel="stylesheet" href="css/jquery.fancybox.min.css">
-        <link rel="stylesheet" href="css/style.css">
-
-        <title>Биотэр</title>
-    </head>
-    <body>
-
-        <div class="site-container">
-
-            <div class="small-header">
-                <div class="container">
-                    <div class="small-header__row row">
-                        <div class="col-auto">
-                            <span class="small-header__text">г. Краснодар&nbsp;</span>
-                            <span class="small-header__text small-header__text_translucent">
-                                ул. им. Александра Покрышкина, д. 25/А
-                            </span>
-                        </div>
-                        <div class="col-auto">
-                            <span class="small-header__text small-header__text_translucent">
-                                Пн.–Чт.: 8:00–17:00, Пт.: 8:00–16:00
-                            </span>
-                        </div>
+<div class="header">
+    <div class="container">
+        <div class="row align-items-center align-items-md-start justify-content-between">
+            <div class="col-auto">
+                <img src="images/header/logo.png" class="header__logo" alt="">
+            </div>
+            <div class="col-auto d-none d-md-flex">
+                <div class="row">
+                    <div class="col-auto">
+                        <button class="footer__button button" data-fancybox data-src="#modal-form">
+                            Заказать звонок
+                        </button>
+                    </div>
+                    <div class="col-auto">
+                        <a href="tel:+79882400735" class="header__phone">8 (988) 240-07-35</a>
+                        <a href="mailto:da@biotr.ru" class="header__email">da@biotr.ru</a>
                     </div>
                 </div>
             </div>
+            <div class="col-auto d-md-none">
+                <a href="tel:+79882400735" class="d-flex">
+                    <img src="images/header/phone-icon.svg" alt="">
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
