Started making hero block

--- a/index.html
+++ b/index.html
@@ -66,6 +66,18 @@
                     </div>
                 </div>
             </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-7">
+                        <h1 class="hero__title">Инновационные технологии для пищевых производств</h1>
+                        <div class="hero__benefits">
+                            <div class="hero__benefit">Снижение себестоимости продукции</div>
+                            <div class="hero__benefit">Улучшение органолептических качеств продукции</div>
+                            <div class="hero__benefit">Технологическая поддержка в ведении производственного процесса</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="use">
             <div class="container">
