--- a/src/html/blocks/hero.html
+++ b/src/html/blocks/hero.html
@@ -3,4 +3,16 @@
     <div class="hero__header">
         @@include('header.html')
     </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-7">
+                <h1 class="hero__title">Инновационные технологии для пищевых производств</h1>
+                <div class="hero__benefits">
+                    <div class="hero__benefit">Снижение себестоимости продукции</div>
+                    <div class="hero__benefit">Улучшение органолептических качеств продукции</div>
+                    <div class="hero__benefit">Технологическая поддержка в ведении производственного процесса</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
