Added responsive hero & desktop hero-categories

--- a/index.html
+++ b/index.html
@@ -68,12 +68,30 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-7">
+                    <div class="col-lg-7 col-md-8">
                         <h1 class="hero__title">Инновационные технологии для пищевых производств</h1>
                         <div class="hero__benefits">
                             <div class="hero__benefit">Снижение себестоимости продукции</div>
                             <div class="hero__benefit">Улучшение органолептических качеств продукции</div>
                             <div class="hero__benefit">Технологическая поддержка в ведении производственного процесса</div>
+                        </div>
+                    </div>
+                    <div class="col-lg-5 col-md-4">
+                        <div class="hero-categories">
+                            <div class="hero-category hero-category_first">
+                                <img src="images/hero-category/syrup.png" class="hero-category__image" alt="">
+                                <div class="hero-category__card">
+                                    Глюкозно-фруктозные сиропы (ГФС-42, ГФС-55)
+                                    <a href="#syrup-category" class="hero-category__anchor">Подробнее</a>
+                                </div>
+                            </div>
+                            <div class="hero-category hero-category_second">
+                                <img src="images/hero-category/silicagel.png" class="hero-category__image" alt="">
+                                <div class="hero-category__card hero-category__card_centered">
+                                    Стабилизаторы для пивоварения и виноделия (силикагелевые)
+                                    <a href="#silicagel-category" class="hero-category__anchor">Подробнее</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -160,7 +178,7 @@
         </div>
         <div class="categories">
             <div class="categories__item">
-                <div class="category container">
+                <div class="category container" id="syrup-category">
                     <div class="row align-items-start align-items-lg-center">
                         <div class="col-md-6 order-1 order-md-0">
                             <h2 class="title">ГФС-42, ГФС-55</h2>
@@ -233,7 +251,7 @@
                 </div>
             </div>
             <div class="categories__item">
-                <div class="category container">
+                <div class="category container" id="silicagel-category">
                     <div class="row align-items-start align-items-lg-center">
                         <div class="col-md-6 order-1 order-md-0">
                             <h2 class="title">Силикагелевые стабилизаторы</h2>
