--- a/src/html/blocks/parts/category-syrup.html
+++ b/src/html/blocks/parts/category-syrup.html
@@ -1,4 +1,4 @@
-<div class="category container">
+<div class="category container" id="syrup-category">
     <div class="row align-items-start align-items-lg-center">
         <div class="col-md-6 order-1 order-md-0">
             <h2 class="title">ГФС-42, ГФС-55</h2>
