--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-7 col-md-8">
+                    <div class="col-lg-7 col-md-8 col-sm-7">
                         <h1 class="hero__title">Инновационные технологии для пищевых производств</h1>
                         <div class="hero__benefits">
                             <div class="hero__benefit">Снижение себестоимости продукции</div>
@@ -76,7 +76,7 @@
                             <div class="hero__benefit">Технологическая поддержка в ведении производственного процесса</div>
                         </div>
                     </div>
-                    <div class="col-lg-5 col-md-4">
+                    <div class="col-lg-5 col-md-4 col-sm-5">
                         <div class="hero-categories">
                             <div class="hero-category hero-category_first">
                                 <img src="images/hero-category/syrup.png" class="hero-category__image" alt="">
